bug 254740 : mailnews quick search is case sensitive with non-ASCII characters (r=neil, sr=bienvenu)